@@ -70,7 +70,7 @@ public:
 		LOG_FILELIST_TRANSFERS, SEND_UNKNOWN_COMMANDS, MAX_HASH_SPEED, OPEN_USER_CMD_HELP,
 		GET_USER_COUNTRY, FAV_SHOW_JOINS, LOG_STATUS_MESSAGES, SHOW_STATUSBAR,
 		SHOW_TOOLBAR, SHOW_TRANSFERVIEW, POPUNDER_PM, POPUNDER_FILELIST, MAGNET_ASK, MAGNET_ACTION, MAGNET_REGISTER,
-		ADD_FINISHED_INSTANTLY, SETTINGS_USE_UPNP, DONT_DL_ALREADY_SHARED,
+		ADD_FINISHED_INSTANTLY, SETTINGS_USE_UPNP, DONT_DL_ALREADY_SHARED, CONFIRM_HUB_REMOVAL, 
 		INT_LAST };
 
 	enum Int64Setting { INT64_FIRST = INT_LAST + 1,
@@ -188,6 +188,6 @@ private:
 
 /**
  * @file
- * $Id: SettingsManager.h,v 1.73 2004/10/17 19:25:23 arnetheduck Exp $
+ * $Id: SettingsManager.h,v 1.74 2004/10/24 11:25:40 arnetheduck Exp $
  */
 
