@@ -293,6 +293,7 @@ string ResourceManager::strings[] = {
 "Ratio", 
 "Re-add source", 
 "Really exit?", 
+"Really remove?", 
 "Redirect", 
 "Redirect request received to a hub that's already connected", 
 "Redirect user(s)", 
@@ -341,6 +342,7 @@ string ResourceManager::strings[] = {
 "Command", 
 "Enable safe and compressed transfers", 
 "Confirm application exit", 
+"Confirm favorite hub removal", 
 "Connection Settings (see the readme / newbie help if unsure)", 
 "Connection Type", 
 "Default away message", 
@@ -807,6 +809,7 @@ string ResourceManager::names[] = {
 "Ratio", 
 "ReaddSource", 
 "ReallyExit", 
+"ReallyRemove", 
 "Redirect", 
 "RedirectAlreadyConnected", 
 "RedirectUser", 
@@ -855,6 +858,7 @@ string ResourceManager::names[] = {
 "SettingsCommand", 
 "SettingsCompressTransfers", 
 "SettingsConfirmExit", 
+"SettingsConfirmHubRemoval", 
 "SettingsConnectionSettings", 
 "SettingsConnectionType", 
 "SettingsDefaultAwayMsg", 
