@@ -296,6 +296,7 @@ enum Strings { // @DontAdd
 	RATIO, // "Ratio"
 	READD_SOURCE, // "Re-add source"
 	REALLY_EXIT, // "Really exit?"
+	REALLY_REMOVE, // "Really remove?"
 	REDIRECT, // "Redirect"
 	REDIRECT_ALREADY_CONNECTED, // "Redirect request received to a hub that's already connected"
 	REDIRECT_USER, // "Redirect user(s)"
@@ -344,6 +345,7 @@ enum Strings { // @DontAdd
 	SETTINGS_COMMAND, // "Command"
 	SETTINGS_COMPRESS_TRANSFERS, // "Enable safe and compressed transfers"
 	SETTINGS_CONFIRM_EXIT, // "Confirm application exit"
+	SETTINGS_CONFIRM_HUB_REMOVAL, // "Confirm favorite hub removal"
 	SETTINGS_CONNECTION_SETTINGS, // "Connection Settings (see the readme / newbie help if unsure)"
 	SETTINGS_CONNECTION_TYPE, // "Connection Type"
 	SETTINGS_DEFAULT_AWAY_MSG, // "Default away message"
