@@ -30,7 +30,9 @@
 * Hopefully fixed a few issues with w9x and Unicode
 * Fixed common control initialization
 * Unix makefile now generates a shared lib (thanks jeremy huddleston)
-
+* Slight memory save for hash database
+* Added favorite hub removal confirmation option (thanks ullner)
+* Fixed broken redirect (thanks garg)
 
 -- 0.4034 2004-10-03 --
 * Help file additions (thanks naga & ullner)
